--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-NYTProf
 
+0.02   2010.10.27
+	- t/00-load.t is magically injected by [@PadrePlugin] via [LoadTests] (AZAWAWI)
+
 0.01   2010.10.23
 
 	- First version, released on an unsuspecting world.
