--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-NYTProf
 
+0.04   2010.12.06
+	- Restored missing POT/PO translation sources (Damyan Ivanov, AZAWAWI)
+
 0.03   2010.10.29
 	- Removed Test::NeedsDisplay dependency (AZAWAWI)
 
